[tool.poetry]
name = "hephaestus"
version = "0.1.0"
description = "Website forge"
authors = ["SPOILDSUSHI"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.2"
sqlmodel = "^0.0.22"
uvicorn = {extras = ["uvloop"], version = "^0.31.1"}
redis = {extras = ["hiredis"], version = "^5.1.1"}
plotly = "^5.24.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
coverage = "^7.6.2"
pytest-cov = "^5.0.0"
black = "^24.10.0"
flake8 = "^7.1.1"
flake8-bandit = "^4.1.1"
flake8-black = "^0.3.6"
flake8-bugbear = "^24.8.19"
flake8-import-order = "^0.18.2"
safety = "^3.2.8"
pre-commit-hooks = "^5.0.0"
isort = "^5.13.2"
pep8-naming = "^0.14.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
